k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-magento2-php
spec:
  type: NodePort
  selector:
    app: magento2-app # <--- ...tiene que ser EXACTAMENTE igual aquí
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magento-ingress
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: svc-magento2-php
      port:
        number: 80
