k8s/todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      hostAliases:
      - ip: "10.14.0.5" 
        hostnames:
        - "db"
        - "mysql"
      - ip: "10.30.32.35" 
        hostnames:
        - "redis"
      containers:
      - name: magento-container
        image: gcr.io/magento-kubernetes-493517/proyecto-magento2:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "2Gi" 
            cpu: "1"
        lifecycle:
          postStart:
            exec:
              command:
              - sh
              - -c
              - |
                mkdir -p var
                chmod -R 777 generated/ var/ pub/static/
                php -d memory_limit=-1 bin/magento cache:flush || true
---
apiVersion: v1
kind: Service
metadata:
  name: svc-magento2-php
  annotations:
    cloud.google.com/backend-config: '{"default": "magento-backend-config"}'
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "my-reserved-ip"
    networking.gke.io/managed-certificates: "my-app-cert"
spec:
  rules:
  - host: magento2.rocasna.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-magento2-php
            port:
              number: 80
